--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,51 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+      <!--Import Google Icon Font-->
+      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
 </head>
-<body>
+<body pink lighten-5>
+
+    <nav>
+
+        <% if admin_signed_in? %>
+          <div class="nav-wrapper pink lighten-4" style="margin: 0;">
+            <a href="/" class="center brand-logo left hide-on-med-and-down">Jess And Gav</a>
+            <ul>
+              <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
+            </ul>
+            <ul id="nav-mobile" class="right">
+              <li><a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=543183660&pwsurl=">
+                Our Registry
+              </a></li>
+              <li><a href="https://www.facebook.com/events/218803975138919/">
+                Facebook
+              </a></li>
+            </ul>
+          </div>
+        <% else %>
+            <div class="nav-wrapper pink lighten-4" style="margin: 0;">
+              <a class="brand-logo left hide-on-med-and-down">Jess And Gav</a>
+              <ul id="nav-mobile" class="right">
+                <li><a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=543183660&pwsurl=">
+                  Our Registry
+                </a></li>
+                <li><a href="https://www.facebook.com/events/218803975138919/">
+                  Facebook
+                </a></li>
+              </ul>
+            </div>
+        <% end %>
+      </div>
+    </nav>
+
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
 <%= yield %>
-
 </body>
 </html>
