--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           </div>
         <% else %>
             <div class="nav-wrapper pink lighten-4" style="margin: 0;">
-              <a class="brand-logo left hide-on-med-and-down">Jess And Gav</a>
+              <a href="/home" class="brand-logo left hide-on-med-and-down">Jess And Gav</a>
               <ul id="nav-mobile" class="right">
                 <li><a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=543183660&pwsurl=">
                   Our Registry
