--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
 </head>
-<body pink lighten-5>
+<body class="brown lighten-5">
 
     <nav>
 
@@ -33,6 +33,7 @@
         <% else %>
             <div class="nav-wrapper pink lighten-4" style="margin: 0;">
               <a href="/home" class="brand-logo left hide-on-med-and-down">Jess And Gav</a>
+              <img src="<%= image_path("navtop.png") %>" class="hide-on-med-and-down" style="margin-left: 30%; width: 40%; height: 70%; margin-top: 1%;"/>
               <ul id="nav-mobile" class="right">
                 <li><a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=543183660&pwsurl=">
                   Our Registry
