--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,14 @@
-<h4 class="center">Thank you soo much Please only Fill out once it will make it alot easier for us!</h4>
+
+<h5 class="center">Thank you soo much Please only Fill out once it will make it alot easier for us!</h5>
 <h6 class="center">please take a look at our registry:)</h6>
+<img class="center" src="<%= image_path("btop.png") %>" style="width: 80%; height: 5em; margin-left: 10%;"/>
 <div class="row">
 <div class="center col s12 m8 offset-m2">
   <div class="video-container">
-    <iframe width="800" height="500" src="https://www.youtube.com/embed/6VcF9hkU0Ec" frameborder="0" allowfullscreen></iframe>
+    <iframe width="720" height="360" src="https://www.youtube.com/embed/6VcF9hkU0Ec" frameborder="0" allowfullscreen></iframe>
   </div>
   <h6>proposal video coming soon!</h6>
 </div>
 </h6>
 </div>
+<img class="center" src="<%= image_path("bbottom.png") %>" style="width: 80%; height: 5em; margin-left: 10%;"/>
