optimized for mobile

--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="row" style="margin: 0;">
-  <div class="col s12 l4 left brown lighten-5" style=" padding: 1px;">
+  <div class="col s12 l4 left brown lighten-5" style=" padding: 1%;">
     <p class="center pink-text text-lighten-3" style="font-size: 20px;">Please fill out your address and information to recieve an invitation to our wedding</p>
     <h5 class="center grey-text">Thank You :)</h5>
     <%= form_for @address do |f| %>
