just a little more navbar stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
           </div>
         <% else %>
             <div class="nav-wrapper pink lighten-4" style="margin: 0;">
-              <a href="/home" class="brand-logo left ">Jess And Gav</a>
+              <a href="/home" class="brand-logo left ">Jess & Gav</a>
               <img src="<%= image_path("navtop.png") %>" class="hide-on-med-and-down" style="margin-left: 30%; width: 40%; height: 70%; margin-top: 1%;"/>
               <ul id="nav-mobile" class="right">
                 <li><a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=543183660&pwsurl=">
