--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -7,12 +7,12 @@
     <%= form_for @address do |f| %>
 
       <div class=" col s12 m12 l6">
-        <%= f.label :First_Name %>
+        <%= f.label :First_Name, class: "grey-text text-darken-4" %>
         <%= f.text_field :first_name, placeholder: "required", autofocus: true, required: true %>
       </div>
 
       <div class=" col s12 m12 l6">
-        <%= f.label :Last_Name %>
+        <%= f.label :Last_Name, class: "grey-text text-darken-4" %>
         <%= f.text_field :last_name, placeholder: "required", required: true %>
       </div>
       <br/>
@@ -20,25 +20,25 @@
       <br/>
       <br/>
 
-        <%= f.label :street %>
+        <%= f.label :street, class: "grey-text text-darken-4"%>
         <%= f.text_field :street, placeholder: "required", required: true %>
 
-        <%= f.label :city %>
+        <%= f.label :city, class: "grey-text text-darken-4" %>
         <%= f.text_field :city, placeholder: "required", required: true %>
 
-        <%= f.label :state %>
+        <%= f.label :state, class: "grey-text text-darken-4" %>
         <%= f.text_field :state, placeholder: "required", required: true %>
 
-        <%= f.label :zip %>
+        <%= f.label :zip, class: "grey-text text-darken-4" %>
         <%= f.number_field :zip, placeholder: "required", required: true %>
 
-        <%= f.label :country %>
+        <%= f.label :country, class: "grey-text text-darken-4" %>
         <%= f.text_field :country, placeholder: "required", required: true %>
 
       <button class="btn pink lighten-4" type="submit" name="button"> Save Address </button>
-
+    </div>
     <% end %>
-  </div>
+
 
   <div class="col s8 right hide-on-med-and-down" style="margin: 0; padding: 0; border: 0;">
     <img src="<%= image_path("jessica.jpg") %>" style="width: 100%; padding: 1%;" />
