--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -21,6 +21,8 @@
       <td><%= a.state %></td>
       <td><%= a.zip %></td>
       <td><%= a.country %></td>
+      <td><%= link_to 'Edit' %></td>
+      <td><%= link_to 'Delete' %></td>
   </tr>
   <% end %>
   </tbody>
