--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -41,6 +41,6 @@
 
 
   <div class="col s8 right hide-on-med-and-down" style="margin: 0; padding: 0; border: 0;">
-    <img src="<%= image_path("engagement.jpg") %>" style="width: 100%;" />
+    <img src="<%= image_path("jess_selfie.jpg") %>" style="width: 100%;" />
   </div>
 </div>
