--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,9 @@
   <div class="video-container">
     <iframe width="720" height="360" src="https://www.youtube.com/embed/6VcF9hkU0Ec" frameborder="0" allowfullscreen></iframe>
   </div>
-  <h6>proposal video coming soon!</h6>
+  <div class="video-container">
+    <iframe width="720" height="360" src="https://www.youtube.com/watch?v=QoBq_QlMqFI&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
 </h6>
 </div>
