--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,10 +7,11 @@
   <div class="video-container">
     <iframe width="720" height="360" src="https://www.youtube.com/embed/6VcF9hkU0Ec" frameborder="0" allowfullscreen></iframe>
   </div>
+</div>
+
+<div class="center col s12 m8 offset-m2">
   <div class="video-container">
     <iframe width="720" height="360" src="https://www.youtube.com/watch?v=QoBq_QlMqFI&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
   </div>
-</div>
-</h6>
 </div>
 <img class="center" src="<%= image_path("bbottom.png") %>" style="width: 80%; height: 5em; margin-left: 10%;"/>
