--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
 
 <div class="center col s12 m8 offset-m2">
   <div class="video-container">
-    <iframe width="720" height="360" src="https://www.youtube.com/watch?v=QoBq_QlMqFI&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QoBq_QlMqFI" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
-<img class="center" src="<%= image_path("bbottom.png") %>" style="width: 80%; height: 5em; margin-left: 10%;"/>
+<img class="center" src="<%= image_path("bbottom.png") %>" style="width: 80%; height: 5em; margin-left: 10%; margin-top: 2em;"/>
