--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,6 @@
 
 <div class="center col s12 m8 offset-m2">
   <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/IhTzNYyJgPc" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/IhTzNYyJgPc" frameborder="0" allowfullscreen style="margin-top: 2em;"></iframe>
 </div>
 <img class="center" src="<%= image_path("bbottom.png") %>" style="width: 80%; height: 5em; margin-left: 10%;"/>
